--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,12 @@
         </activity>
         <activity android:name="com.faceplusplus.apitest.SelectPictureActivity"/>
         <activity android:name="com.faceplusplus.apitest.TextDetectActivity"/>
+        <activity android:name="com.faceplusplus.shake.TestActivity"/>
+        <activity android:name="com.faceplusplus.shake.DensityUtil"/>
+           <activity android:name="com.faceplusplus.shake.NeedForAnim"/>
+           <activity android:name="com.faceplusplus.shake.NeedForSound"/>
+            <activity android:name="com.faceplusplus.shake.ShakeListener"/>
+        
         
     </application>
     <uses-permission android:name="android.permission.CAMERA" />
