--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,18 +24,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait" 
             android:name="com.faceplusplus.apitest.PhotoDetectActivity"
             android:label="@string/app_name2" >  
         </activity>
-        <activity android:name="com.faceplusplus.apitest.SelectPictureActivity"/>
-        <activity android:name="com.faceplusplus.apitest.TextDetectActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.faceplusplus.apitest.SelectPictureActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.faceplusplus.apitest.TextDetectActivity"/>
         
-        <activity android:name="com.faceplusplus.shake.DensityUtil"/>
-        <activity android:name="com.faceplusplus.shake.NeedForSound"/>
-        <activity android:name="com.faceplusplus.shake.ShakeListener"/>
+        <activity android:screenOrientation="portrait" android:name="com.faceplusplus.shake.DensityUtil"/>
+        <activity android:screenOrientation="portrait" android:name="com.faceplusplus.shake.NeedForSound"/>
+        <activity android:screenOrientation="portrait" android:name="com.faceplusplus.shake.ShakeListener"/>
         
-        <activity android:name="com.faeplusplusRollOver.RollActivity"/>
-        <activity android:name="com.faeplusplusRollOver.RollActivityTurn"/>
+        <activity android:screenOrientation="portrait" android:name="com.faeplusplusRollOver.RollActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.faeplusplusRollOver.RollActivityTurn"/>
         
         
     </application>
